syntax = "proto3";
package proto;

option go_package = "./proto";

message ShamanTalents {
	// Elemental
	int32 acuity = 1;
	int32 convection = 2;
	int32 concussion = 3;
	int32 call_of_flame = 4;
	int32 elemental_warding = 5;
	int32 reverberation = 6;
	int32 elemental_precision = 7;
	int32 rolling_thunder = 8;
	bool elemental_focus = 9;
	int32 elemental_reach = 10;
	int32 elemental_oath = 11;
	int32 lava_flows = 12;
	bool fulmination = 13;
	bool elemental_mastery = 14;
	int32 earths_grasp = 15;
	bool totemic_wrath = 16;
	int32 feedback = 17;
	int32 lava_surge = 18;
	bool earthquake = 19;

	// Enhancement
	int32 elemental_weapons = 20;
	int32 focused_strikes = 21;
	int32 improved_shields = 22;
	int32 elemental_devastation = 23;
	int32 flurry = 24;
	int32 ancestral_swiftness = 25;
	int32 totemic_reach = 26;
	int32 toughness = 27;
	bool stormstrike = 28;
	int32 static_shock = 29;
	int32 frozen_power = 30;
	int32 seasoned_winds = 31;
	int32 searing_flames = 32;
	int32 earthen_power = 33;
	bool shamanistic_rage = 34;
	int32 unleashed_rage = 35;
	int32 maelstrom_weapon = 36;
	int32 improved_lava_lash = 37;
	bool feral_spirit = 38;

	// Restoration
	int32 ancestral_resolve = 39;
	int32 tidal_focus = 40;
	int32 spark_of_life = 41;
	int32 resurgence = 42;
	int32 totemic_focus = 43;
	int32 focused_insight = 44;
	int32 natures_guardian = 45;
	int32 ancestral_healing = 46;
	bool natures_swiftness = 47;
	int32 natures_blessing = 48;
	int32 soothing_rains = 49;
	bool improved_cleanse_spirit = 50;
	int32 cleansing_waters = 51;
	int32 ancestral_awakening = 52;
	bool mana_tide_totem = 53;
	int32 telluric_currents = 54;
	bool spirit_link_totem = 55;
	int32 tidal_waves = 56;
	int32 blessing_of_the_eternals = 57;
	bool riptide = 58;
}
enum ShamanPrimeGlyph {
	ShamanPrimeGlyphNone = 0;
	GlyphOfEarthShield = 45775;
	GlyphOfEarthlivingWeapon = 41527;
	GlyphOfFeralSpirit = 45771;
	GlyphOfFireElementalTotem = 41529;
	GlyphOfFlameShock = 41531;
	GlyphOfFlametongueWeapon = 41532;
	GlyphOfLavaBurst = 41524;
	GlyphOfLavaLash = 41540;
	GlyphOfLightningBolt = 41536;
	GlyphOfRiptide = 45772;
	GlyphOfShocking = 41526;
	GlyphOfStormstrike = 41539;
	GlyphOfUnleashedLightning = 71155;
	GlyphOfWaterShield = 41541;
	GlyphOfWindfuryWeapon = 41542;
}
enum ShamanMajorGlyph {
	ShamanMajorGlyphNone = 0;
	GlyphOfChainHeal = 41517;
	GlyphOfChainLightning = 41518;
	GlyphOfElementalMastery = 41552;
	GlyphOfFireNova = 41530;
	GlyphOfFrostShock = 41547;
	GlyphOfGhostWolf = 43725;
	GlyphOfGroundingTotem = 41538;
	GlyphOfHealingStreamTotem = 41533;
	GlyphOfHealingWave = 41534;
	GlyphOfHex = 45777;
	GlyphOfLightningShield = 41537;
	GlyphOfShamanisticRage = 45776;
	GlyphOfStoneclawTotem = 45778;
	GlyphOfThunder = 45770;
	GlyphOfTotemicRecall = 41535;
}
enum ShamanMinorGlyph {
	ShamanMinorGlyphNone = 0;
	GlyphOfAstralRecall = 43381;
	GlyphOfRenewedLife = 43385;
	GlyphOfTheArcticWolf = 43386;
	GlyphOfThunderstorm = 44923;
	GlyphOfWaterBreathing = 43344;
	GlyphOfWaterWalking = 43388;
}

enum EarthTotem {
	NoEarthTotem = 0;
	StrengthOfEarthTotem = 1;
	TremorTotem = 2;
	StoneskinTotem = 3;
}

enum AirTotem {
	NoAirTotem = 0;
	WindfuryTotem = 2;
	WrathOfAirTotem = 3;
}

enum FireTotem {
	NoFireTotem = 0;
	MagmaTotem = 1;
	SearingTotem = 2;
	TotemOfWrath = 3;
	FlametongueTotem = 4;
}

enum WaterTotem {
	NoWaterTotem = 0;
	ManaSpringTotem = 1;
	HealingStreamTotem = 2;
}

message ShamanTotems {
	// Not used here, but used by APL
	enum TotemType {
		TypeUnknown = 0;
		Earth = 1;
		Air = 2;
		Fire = 3;
		Water = 4;
	}

	EarthTotem earth = 1;
	AirTotem air = 2;
	FireTotem fire = 3;
	WaterTotem water = 4;

	// If set, will use fire elemental totem at the start and revert to regular
	// fire totems when it expires.
	bool use_fire_elemental = 6;

	// Bonus spell power for fire elemental snapshotting.
	int32 bonus_spellpower = 10;

	// Snapshot fire elemental using Tier 10 4 set bonus.
	bool enh_tier_ten_bonus = 11;
}

enum ShamanShield {
	NoShield = 0;
	WaterShield = 1;
	LightningShield = 2;
}

enum ShamanImbue {
    NoImbue = 0;
    WindfuryWeapon = 1;
    FlametongueWeapon = 2;
    FlametongueWeaponDownrank = 3;
    FrostbrandWeapon = 4;
}

enum ShamanSyncType {
  NoSync = 0;
  SyncMainhandOffhandSwings = 1;
  DelayOffhandSwings = 2;
	Auto = 3;
}

message ElementalShaman {
	message Rotation {
	}

	message Options {
		ShamanShield shield = 1;
		ShamanTotems totems = 3;
		
		enum ThunderstormRange {
			UnsetTSRange = 0;
			TSInRange = 1;
			TSOutofRange = 2;
		}
		ThunderstormRange thunderstormRange = 4;
	}

	Options options = 3;
}

message EnhancementShaman {
	message Rotation {
	}

	message Options {
		ShamanShield shield = 1;
		ShamanSyncType sync_type = 3;
		ShamanImbue imbue_mh = 4;
		ShamanImbue imbue_oh = 5;
		ShamanTotems totems = 6;
	}

	Options options = 3;
}

enum ShamanHealSpell {
	AutoHeal = 0;
	HealingWave = 1;
	LesserHealingWave = 2;
	ChainHeal = 3;
}

message RestorationShaman {
	message Rotation {
	}

	message Options {
		ShamanShield shield = 1;
		ShamanImbue imbue_mh = 4;
		int32 earth_shield_p_p_m = 5;
		ShamanTotems totems = 6;
	}

	Options options = 3;
}